change micro theme to atom-dark

--- a/micro/settings.json
+++ b/micro/settings.json
@@ -1,6 +1,6 @@
 {
     "colorcolumn": 80,
-    "colorscheme": "twilight",
+    "colorscheme": "atom-dark",
     "indentchar": "|",
     "rmtrailingsws": true
 }
