--- a/source_main.rc
+++ b/source_main.rc
@@ -1,3 +1,10 @@
+# Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
+# Initialization code that may require console input (password prompts, [y/n]
+# confirmations, etc.) must go above this block; everything else may go below.
+if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
+  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
+fi
+
 # source all files in this directory
 CURR_DIR="$(dirname $0)"
 for f in $CURR_DIR/*; do
@@ -8,3 +15,8 @@ done;
 
 # Make micro the default editor
 EDITOR="micro"
+
+#Powerlevel10k setup
+
+# To customize prompt, run `p10k configure` or edit $CURR_DIR/oh-my-zsh/powerlevel/p10k.zsh.
+[[ ! -f $CURR_DIR/oh-my-zsh/powerlevel/p10k.zsh ]] || source $CURR_DIR/oh-my-zsh/powerlevel/p10k.zsh
