--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -841,18 +841,18 @@ window_padding_width 5
 
 #: The edge to show the tab bar on, top or bottom.
 
-# tab_bar_margin_width 0.0
+tab_bar_margin_width      9
 
 #: The margin to the left and right of the tab bar (in pts).
 
-# tab_bar_margin_height 0.0 0.0
+tab_bar_margin_height     9 0
 
 #: The margin above and below the tab bar (in pts). The first number
 #: is the margin between the edge of the OS Window and the tab bar.
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style powerline
+tab_bar_style             separator
 
 #: The tab bar style, can be one of:
 
@@ -883,7 +883,7 @@ tab_bar_style powerline
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
 
-# tab_bar_min_tabs 2
+tab_bar_min_tabs          1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown.
@@ -905,7 +905,7 @@ tab_bar_style powerline
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-# tab_separator " ┇"
+tab_separator             ""
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -923,7 +923,7 @@ tab_powerline_style slanted
 #: leading or trailing spaces, surround the text with quotes. See
 #: tab_title_template for how this is rendered.
 
-# tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+tab_title_template        "{fmt.fg._5c6370}{fmt.bg.default}{fmt.fg._abb2bf}{fmt.bg._5c6370} {title[:15] + (title[15:] and '…')} ⌘{index}{fmt.fg._5c6370}{fmt.bg.default} "
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
@@ -960,14 +960,14 @@ tab_powerline_style slanted
 #: {activity_symbol} are not present in the template, they are
 #: prepended to it.
 
-# active_tab_title_template none
+active_tab_title_template "{fmt.fg._e5c07b}{fmt.bg.default}{fmt.fg._282c34}{fmt.bg._e5c07b} {title[:40] + (title[40:] and '…')} ⌘{index}{fmt.fg._e5c07b}{fmt.bg.default} "
 
 #: Template to use for active tabs. If not specified falls back to
 #: tab_title_template.
 
 # active_tab_foreground   #000
 # active_tab_background   #eee
-# active_tab_font_style   bold-italic
+active_tab_font_style   bold
 # inactive_tab_foreground #444
 # inactive_tab_background #999
 # inactive_tab_font_style normal
