--- a/source_main.rc
+++ b/source_main.rc
@@ -20,3 +20,10 @@ EDITOR="micro"
 
 # To customize prompt, run `p10k configure` or edit $CURR_DIR/oh-my-zsh/powerlevel/p10k.zsh.
 [[ ! -f $CURR_DIR/oh-my-zsh/powerlevel/p10k.zsh ]] || source $CURR_DIR/oh-my-zsh/powerlevel/p10k.zsh
+
+
+# auto start zellij at start and exit on zellij exit
+if [[ -z "$ZELLIJ" && -n "$AUTOSTART_ZELLIJ" ]]; then
+    zellij attach -c main
+    exit
+fi
