--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["~/.config/alacritty/themes/themes/tokyo_night.toml"]
 
 [env]
 
@@ -15,3 +14,6 @@ bindings = [{ key="N", mods="Control | Shift", action="SpawnNewInstance" },]
 [window]
 blur = true
 opacity = 0.82
+
+[general]
+import = ["~/.config/alacritty/themes/themes/tokyo_night.toml"]
