starship: only enable python module when an environment is active

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -30,4 +30,9 @@ success_symbol = "[\\$](bold green)"
 error_symbol = "[\\$](bold red)"
 
 [python]
-format = "via [🐍 $virtualenv](bold green)"
+format = 'via [${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style)'
+symbol = "🐍"
+style = "bold green"
+detect_files = []
+detect_folders = []
+detect_extensions = []
