--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -4,7 +4,7 @@
 add_newline = true
 
 # The prompt format. Directory on the first line, prompt character on the second.
-format = """$hostname$directory$git_branch$git_status$fill$cmd_duration$time\n$character"""
+format = """$username$hostname$directory$git_branch$git_status$fill$cmd_duration$time\n$character"""
 right_format = "$python"
 
 [fill]
@@ -29,7 +29,11 @@ error_symbol = "[\\$](bold red)"
 
 [hostname]
 disabled = false
-format = "on [$hostname](bold red) "
+format = "[$hostname]($style):"
+
+[username]
+disabled = false
+format = "[$user]($style)@"
 
 [python]
 format = 'via [${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style)'
